Fix header overflow

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     font-family: sans-serif;
     background-color: #222222;
-    overflow-x: hidden;
 }
 
 ul {
@@ -29,7 +28,6 @@ li > a {
     text-transform: capitalize;
     display: block;
     padding: 20px 0;
-    width: 100%;
     position: relative;
     border: 10px solid transparent;
 }
